--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,18 @@
 body {
-    text-align: center;
     font-family: "Arial";
+    background-color: whitesmoke;
+    color:slateblue
+}
+
+h1, h3{
+    text-align: center;
+    font-size: 48px;
+}
+
+.span{
+    font-size: 16px;
+}
+
+li{
+    font-size: 15px;
 }
