--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,10 @@ h1, h3{
     text-align: center;
     font-size: 48px;
 }
+h2{
+    text-align: center;
+    color: rgb(9, 9, 9);
+}
 
 .span{
     font-size: 16px;
