--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,12 @@
 body {
     font-family: "Arial";
     background-color: whitesmoke;
-    color:slateblue
+    color:slateblue;
+    padding: auto;
+    margin: 20px;
 }
 
-h1, h3{
+h1{
     text-align: center;
     font-size: 48px;
 }
@@ -12,11 +14,23 @@ h2{
     text-align: center;
     color: rgb(9, 9, 9);
 }
-
-.span{
-    font-size: 16px;
+h3{
+    text-align: center;
 }
 
+.spans{
+    font-size: 16px;
+    margin: 90px;
+    text-align:left; 
+    word-spacing: 10;
+}
+
+.listado{
+    font-size: 16px;
+    margin: 90px;
+    text-align:left; 
+    word-spacing: 10;
+}
 li{
     font-size: 15px;
 }
