--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,9 +7,21 @@ body {
     text-align: justify;
 }
 
-h1{
-    text-align: center;
-    font-size: 48px;
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding: auto;
+}
+#icono{
+    width: 64px;
+    height: 64px;
+    text-align: left;
+    padding-top: 25px;
+}
+.titulo{
+    font-size: 32px;
+    text-align: right;
+    padding-right: 24px;
 }
 h2{
     text-align: center;
